--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.1",
+    "@material-ui/icons": "^4.9.1",
+    "fontsource-roboto": "^3.0.3",
     "next": "10.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1"
