--- a/package.json
+++ b/package.json
@@ -3,20 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "build": "npm run codegen && next build",
+    "codegen": "graphql-let",
+    "dev": "npm run codegen && next dev",
     "lint": "eslint . --ext .ts,.tsx",
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.2.9",
+    "@graphql-tools/load-files": "^6.2.5",
+    "@graphql-tools/merge": "^6.2.5",
+    "@graphql-tools/schema": "^7.1.0",
     "@material-ui/core": "^4.11.1",
     "@material-ui/icons": "^4.9.1",
+    "apollo-server-micro": "^2.19.0",
+    "fast-xml-parser": "^3.17.4",
     "fontsource-roboto": "^3.0.3",
+    "graphql": "^15.4.0",
     "next": "10.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^1.19.3",
+    "@graphql-codegen/plugin-helpers": "^1.18.2",
+    "@graphql-codegen/typescript": "^1.18.1",
+    "@graphql-codegen/typescript-operations": "^1.17.12",
+    "@graphql-codegen/typescript-react-apollo": "^2.2.1",
+    "@graphql-codegen/typescript-resolvers": "^1.17.12",
     "@types/node": "^14.14.10",
     "@types/react": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.8.2",
@@ -25,6 +39,9 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "typescript": "^4.1.2"
+    "graphql-let": "^0.16.3",
+    "graphql-tag": "^2.11.0",
+    "typescript": "^4.1.2",
+    "yaml-loader": "^0.6.0"
   }
 }
