--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "graphql-let": "^0.16.3",
     "graphql-tag": "^2.11.0",
+    "husky": "^4.3.0",
     "typescript": "^4.1.2",
     "yaml-loader": "^0.6.0"
   }
