--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "scripts": {
     "build": "npm run codegen && next build",
     "codegen": "graphql-let",
+    "coverage": "jest --coverage",
     "dev": "npm run codegen && next dev",
     "lint": "eslint . --ext .ts,.tsx",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest"
   },
   "dependencies": {
     "@apollo/client": "^3.2.9",
@@ -31,8 +33,10 @@
     "@graphql-codegen/typescript-operations": "^1.17.12",
     "@graphql-codegen/typescript-react-apollo": "^2.2.1",
     "@graphql-codegen/typescript-resolvers": "^1.17.12",
+    "@types/jest": "^26.0.15",
     "@types/node": "^14.14.10",
     "@types/react": "^17.0.0",
+    "@types/react-test-renderer": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.8.2",
     "@typescript-eslint/parser": "^4.8.2",
     "eslint": "^7.14.0",
@@ -42,6 +46,8 @@
     "graphql-let": "^0.16.3",
     "graphql-tag": "^2.11.0",
     "husky": "^4.3.0",
+    "jest": "^26.6.3",
+    "react-test-renderer": "^17.0.1",
     "typescript": "^4.1.2",
     "yaml-loader": "^0.6.0"
   }
