--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,7 @@
     }
   },
   "rules": {
+    "@typescript-eslint/explicit-function-return-type": "error",
     "comma-dangle": [
       "error",
       "always-multiline"
@@ -34,6 +35,12 @@
           "order": "asc"
         }
       }
+    ],
+    "no-console": "warn",
+    "no-debugger": "warn",
+    "quotes": [
+      "error",
+      "single"
     ],
     "semi": [
       "error",
