--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "scripts": {
     "build": "npm run codegen && next build",
     "codegen": "graphql-let",
-    "coverage": "jest --coverage",
+    "coverage": "npm test -- --coverage",
+    "coverage:watch": "npm run coverage -- --watch",
     "dev": "npm run codegen && next dev",
     "lint": "eslint . --ext .ts,.tsx",
     "start": "next start",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "npm test -- --watch"
   },
   "dependencies": {
     "@apollo/client": "^3.2.9",
@@ -18,10 +20,12 @@
     "@graphql-tools/schema": "^7.1.0",
     "@material-ui/core": "^4.11.1",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "apollo-server-micro": "^2.19.0",
     "fast-xml-parser": "^3.17.4",
     "fontsource-roboto": "^3.0.3",
     "graphql": "^15.4.0",
+    "he": "^1.2.0",
     "next": "10.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1"
@@ -33,6 +37,7 @@
     "@graphql-codegen/typescript-operations": "^1.17.12",
     "@graphql-codegen/typescript-react-apollo": "^2.2.1",
     "@graphql-codegen/typescript-resolvers": "^1.17.12",
+    "@types/he": "^1.1.1",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.10",
     "@types/react": "^17.0.0",
