--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "scripts": {
     "build": "npm run codegen && next build",
+    "build-storybook": "build-storybook",
     "codegen": "graphql-let",
     "coverage": "npm test -- --coverage",
     "coverage:watch": "npm run coverage -- --watch",
     "dev": "npm run codegen && next dev",
     "lint": "eslint . --ext .ts,.tsx",
     "start": "next start",
+    "storybook": "start-storybook -p 6006",
     "test": "jest",
     "test:watch": "npm test -- --watch"
   },
@@ -31,12 +33,18 @@
     "react-dom": "17.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.9",
     "@graphql-codegen/cli": "^1.19.3",
     "@graphql-codegen/plugin-helpers": "^1.18.2",
     "@graphql-codegen/typescript": "^1.18.1",
     "@graphql-codegen/typescript-operations": "^1.17.12",
     "@graphql-codegen/typescript-react-apollo": "^2.2.1",
     "@graphql-codegen/typescript-resolvers": "^1.17.12",
+    "@storybook/addon-actions": "^6.1.9",
+    "@storybook/addon-essentials": "^6.1.9",
+    "@storybook/addon-links": "^6.1.9",
+    "@storybook/addon-storyshots": "^6.1.9",
+    "@storybook/react": "^6.1.9",
     "@types/he": "^1.1.1",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.10",
@@ -44,6 +52,7 @@
     "@types/react-test-renderer": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.8.2",
     "@typescript-eslint/parser": "^4.8.2",
+    "babel-loader": "^8.2.2",
     "eslint": "^7.14.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-react": "^7.21.5",
