Connect to the database

--- a/package.json
+++ b/package.json
@@ -9,11 +9,21 @@
     "coverage": "npm test -- --coverage",
     "coverage:watch": "npm run coverage -- --watch",
     "dev": "npm run codegen && next dev",
+    "docker:down": "npm run docker:kill && npm run docker:rm",
+    "docker:kill": "docker-compose -f docker-compose.dev.yaml kill",
+    "docker:mysql": "docker exec -it `docker ps | grep mysql | awk '{print $1}'` bash",
+    "docker:pull": "docker-compose -f docker-compose.dev.yaml pull",
+    "docker:rm": "docker-compose -f docker-compose.dev.yaml rm -f",
+    "docker:up": "docker-compose -f docker-compose.dev.yaml up -d",
+    "entity:create": "npm run typeorm entity:create",
     "lint": "eslint . --ext .ts,.tsx",
+    "migration:create": "npm run typeorm migration:create",
+    "migration:run": "npm run typeorm migration:run",
     "start": "next start",
     "storybook": "start-storybook -p 6006",
     "test": "jest",
-    "test:watch": "npm test -- --watch"
+    "test:watch": "npm test -- --watch",
+    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
     "@apollo/client": "^3.2.9",
@@ -24,16 +34,22 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "apollo-server-micro": "^2.19.0",
+    "class-validator": "^0.12.2",
     "fast-xml-parser": "^3.17.4",
     "fontsource-roboto": "^3.0.3",
     "graphql": "^15.4.0",
     "he": "^1.2.0",
+    "mysql2": "^2.2.5",
     "next": "10.0.3",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "0.2.22"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-proposal-decorators": "^7.12.1",
     "@graphql-codegen/cli": "^1.19.3",
     "@graphql-codegen/plugin-helpers": "^1.18.2",
     "@graphql-codegen/typescript": "^1.18.1",
