--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "apollo-server-micro": "^2.19.0",
+    "bcryptjs": "^2.4.3",
     "class-validator": "^0.12.2",
     "fast-xml-parser": "^3.17.4",
     "fontsource-roboto": "^3.0.3",
@@ -61,6 +62,7 @@
     "@storybook/addon-links": "^6.1.10",
     "@storybook/addon-storyshots": "^6.1.10",
     "@storybook/react": "^6.1.10",
+    "@types/bcryptjs": "^2.4.2",
     "@types/he": "^1.1.1",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.10",
