--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "fontsource-roboto": "^3.0.3",
     "graphql": "^15.4.0",
     "he": "^1.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
     "next": "10.0.3",
     "react": "17.0.1",
@@ -71,6 +72,7 @@
     "@typescript-eslint/eslint-plugin": "^4.8.2",
     "@typescript-eslint/parser": "^4.8.2",
     "babel-loader": "^8.2.2",
+    "dotenv": "^8.2.0",
     "eslint": "^7.14.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-react": "^7.21.5",
