Implement the Create Event mutation

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "migration:run": "npm run typeorm migration:run",
     "start": "next start",
     "storybook": "start-storybook -p 6006",
-    "test": "jest",
+    "test": "jest --runInBand",
     "test:watch": "npm test -- --watch",
     "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
   },
@@ -41,6 +41,7 @@
     "graphql": "^15.4.0",
     "he": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
+    "luxon": "^1.25.0",
     "mysql2": "^2.2.5",
     "next": "10.0.3",
     "react": "17.0.1",
@@ -66,6 +67,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/he": "^1.1.1",
     "@types/jest": "^26.0.15",
+    "@types/luxon": "^1.25.0",
     "@types/node": "^14.14.10",
     "@types/react": "^17.0.0",
     "@types/react-test-renderer": "^17.0.0",
